--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0 || ^9.0.0-0",
+    "@angular/animations": "^8.0.0",
     "@angular/cdk": "8.2.3  ",
-    "@angular/common": "^8.0.0",
+    "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/flex-layout": "^8.0.0-beta.26",
@@ -14,7 +14,7 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
-    "angular-in-memory-web-api": "^0.8.0",
+    "angular-in-memory-web-api": "^0.9.0",
     "core-js": "2",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
@@ -35,7 +35,7 @@
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "~5.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
